src/objects/SalesOrder__c.object
<CustomObject>
    <description>This object contains orders from SAP.</description>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SalesOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesAmount__c</fullName>
        <label>Sales Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesQuantity__c</fullName>
        <label>Sales Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Waiting Customer</fullName>
                </value>
                <value>
                    <fullName>Require Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SO-{0000}</displayFormat>
        <label>Sales Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ValidateSalesOrder</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
        NOT( ISPICKVAL( Status__c , &quot;Require Approval&quot;) ),
        SalesAmount__c &gt;= 100
)</errorConditionFormula>
        <errorMessage>You must select &quot;Require Approval&quot; for more than 100 Sales Amount.</errorMessage>
    </validationRules>
</CustomObject>